lealone.bat/sh中默认不配置jvm参数